Refactor codebase by removing unused files and updating documentation; enhance .gitignore to exclude generated data while preserving raw data. Add repository link comments for clarity in multiple scripts.

--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,8 @@
 data/externalData/*.txt
 data/externalData/*.xml
 data/externalData/*.owl
-data/programGeneratedData/
+data/programGeneratedData/*
+!data/programGeneratedData/raw_data/
 data/externalData/
 
 # Python
